--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ serde = { version = "1.0.199", features = [ "derive" ] }
 serde_json = "1.0.116"
 dotenv = "0.15.0"
 redis = { version = "0.25.3", features = [ "tokio-rustls-comp", "connection-manager" ] }
-inevents-redis = { git = "https://github.com/INTEARnear/inevents", branch = "v3" }
-intear-events = { git = "https://github.com/INTEARnear/inevents", branch = "v3" }
+inevents-redis = { git = "https://github.com/INTEARnear/inevents" }
+intear-events = { git = "https://github.com/INTEARnear/intear-events" }
 aurora-engine-types = "1.0.0"
 aurora-engine-sdk = "1.0.0"
 aurora-engine-transactions = "1.0.0"
